updated entitys and DTOs as well as contact controller